--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "socket.io-client": "^4.1.2",
+    "venom-bot": "^3.0.19",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
